feat:padronização de código, melhoria de build-run, geração automática do swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 application.l10n.basenames=messages
 
 ## Kafka Producer Properties
-spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 
 # Kafka Consumer properties
-spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
 spring.kafka.consumer.group-id=group_id
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -31,7 +29,8 @@ spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.seri
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 ## Common Kafka Properties
-topic.votacao.resultado=votacao.resultado
+spring.kafka.bootstrap-servers=localhost:9092
+voting.result.topic=voting-result
 auto.create.topics.enable=true
 
 
